2024-10-09T00:36:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11246016054 # 576
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-09
* notice: last 14d: unq all: 15 42
* notice: prev accum: outdated-unq outdated-all / unq all: 830 4599 / 848 4646
* notice: next accum: outdated-unq outdated-all / unq all: 834 4605 / 849 4647
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-09-24] / [2024-10-08]

2024-10-08T00:36:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11226352607 # 574
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-08
* notice: last 14d: unq all: 17 47
* notice: prev accum: outdated-unq outdated-all / unq all: 830 4599 / 847 4645
* notice: next accum: outdated-unq outdated-all / unq all: 830 4599 / 848 4646
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-10-07]

2024-10-07T00:38:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11206574123 # 572
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-07
* notice: last 14d: unq all: 16 46
* notice: prev accum: outdated-unq outdated-all / unq all: 829 4598 / 847 4645
* notice: next accum: outdated-unq outdated-all / unq all: 830 4599 / 847 4645
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-22] / []

2024-10-06T00:39:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11197539387 # 570