@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-09T00:36:21Z",
-  "count_outdated" : 4605,
-  "uniques_outdated" : 834,
+  "timestamp" : "2024-10-10T00:36:11Z",
+  "count_outdated" : 4611,
+  "uniques_outdated" : 835,
   "count" : 4647,
   "uniques" : 849,
   "views" : [
-    {
-      "timestamp": "2024-09-25T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "count_decinc": [ 0, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-27T00:00:00Z",
       "count": 9,
