@@ -1,12 +1,7 @@
 {
-  "count": 42,
-  "uniques": 15,
+  "count": 36,
+  "uniques": 14,
   "views": [
-    {
-      "timestamp": "2024-09-25T00:00:00Z",
-      "count": 6,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-09-27T00:00:00Z",
       "count": 9,
