@@ -1,3 +1,12 @@
+2024-10-10T00:36:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11265271532 # 578
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-10
+* notice: last 14d: unq all: 14 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 834 4605 / 849 4647
+* notice: next accum: outdated-unq outdated-all / unq all: 835 4611 / 849 4647
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-09-25] / []
+
 2024-10-09T00:36:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11246016054 # 576
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-09
